<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/happy_hedgehogs"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.bcit.hedgehog_honeymoon.SettingsFragment"
        android:layout_width="match_parent"
        android:layout_height="413dp" />

    <Button
        android:id="@+id/button_main_play"
        android:layout_width="316dp"
        android:layout_height="126dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/play" />

    <Button
        android:id="@+id/button_main_settings"
        android:layout_width="317dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/settings" />
</LinearLayout>